--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -346,7 +346,7 @@
       font-weight: bold;
       color: var(--accent);
     }
-  
+
     .changelog-entry {
       background: rgba(255, 192, 15, 0.05);
       border-left: 3px solid var(--accent);
@@ -827,25 +827,20 @@
 <div class="container">
     <details>
       <summary>Version History</summary>
-      <div class="changelog-entry">
-        <h4>v3.0 Beta</h4>
-        <ul>
-          <li>Expansion towards a more generalized database tool:</li>
-          <li>Added category icons</li>
-          <li>
-            Added placement conditions (plan, entitlement) for objects, and added respective source icons (SCORE, Gold Bullion, Stamps, Atomic Shop icons)
-            <ul>
-              <li>Known issue: certain plans will not show yet (e.g., Nuclear Winter stash boxes)</li>
-              <li>Challenge requirements may also not appear (e.g., Kelp Curtain)</li>
-              <li>NOTE: Tool does not distinguish obtainable vs unobtainable — verify yourself if needed</li>
-            </ul>
-          </li>
-          <li>Added search filters</li>
-          <li>Added different search options</li>
-          <li>General UI cleanup</li>
-          <li>Full v3.0 release will also list CAMP budget costs, have more source icons, and include further polishing of minor issues</li>
-        </ul>
-      </div>
+<div class="changelog-entry">
+    <h4>v3.0 Beta</h4>
+    <pre>
+- Expansion towards a more generalized database tool:
+    - Added category icons
+    - Added category icons
+    - Added placement conditions (plan, entitlement) for objects, and added respective source icons, i.e. SCORE, Gold Bullion, Stamps, Atomic Shop icons. Known issue with beta version: certain plans will not show yet (i.e. Nuclear Winter stash boxes), nor do challenge requirements (i.e. Kelp Curtain). NOTE: THIS TOOL DOES NOT DISTINGUISH BETWEEN WHAT IS AND ISN'T OBTAINABLE. PLEASE DOUBLE CHECK THIS YOURSELF IF APPLICABLE
+    - Added search filters
+    - Added different search options
+    - General UI cleanup
+    - Full v3.0 release will also list CAMP budget costs, have more source icons, and include further polishing of minor issues
+    </pre>
+</div>
+>
       <div class="changelog-entry">
         <h4>v2.3.1</h4>
         <ul><li>Fixed issue that caused crops to not have preview images</li></ul>
