--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -829,14 +829,13 @@
       <summary>Version History</summary>
       <div class="changelog-entry">
           <h4>v3.0 Beta</h4>
-          <ul style="padding-left: 2em;">
-              <li>Expansion towards a more generalized database tool:
+              Expansion towards a more generalized database tool:
                   <ul style="padding-left: 1.5em;">
-                      <li>Added category icons</li>
-                      <li>Added placement conditions (plan, entitlement) for objects, and added respective source icons, i.e. SCORE, Gold Bullion, Stamps, Atomic Shop icons. Known issue with beta version: certain plans will not show yet (i.e. Nuclear Winter stash boxes), nor do challenge requirements (i.e. Kelp Curtain). NOTE: THIS TOOL DOES NOT DISTINGUISH BETWEEN WHAT IS AND ISN'T OBTAINABLE. PLEASE DOUBLE CHECK THIS YOURSELF IF APPLICABLE</li>
-                      <li>Added search filters</li>
-                      <li>General UI cleanup</li>
-                      <li>Full v3.0 release will also list CAMP budget costs, have more source icons, and include further polishing of minor issues</li>
+                      Added category icons
+                      Added placement conditions (plan, entitlement) for objects, and added respective source icons, i.e. SCORE, Gold Bullion, Stamps, Atomic Shop icons. Known issue with beta version: certain plans will not show yet (i.e. Nuclear Winter stash boxes), nor do challenge requirements (i.e. Kelp Curtain). NOTE: THIS TOOL DOES NOT DISTINGUISH BETWEEN WHAT IS AND ISN'T OBTAINABLE. PLEASE DOUBLE CHECK THIS YOURSELF IF APPLICABLE
+                      Added search filters
+                      General UI cleanup
+                      Full v3.0 release will also list CAMP budget costs, have more source icons, and include further polishing of minor issues
                   </ul>
               </li>
           </ul>
