--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -827,16 +827,20 @@
 <div class="container">
     <details>
       <summary>Version History</summary>
-        <div class="changelog-entry">
+       <div class="changelog-entry">
           <h4>v3.0 Beta</h4>
-          <div style="padding-left: 1.5em;">
-              Expansion towards a more generalized database tool:<br>
-              &nbsp;&nbsp;&nbsp;Added category icons<br>
-              &nbsp;&nbsp;&nbsp;Added placement conditions (plan, entitlement) for objects, and added respective source icons, i.e. SCORE, Gold Bullion, Stamps, Atomic Shop icons. Known issue with beta version: certain plans will not show yet (i.e. Nuclear Winter stash boxes), nor do challenge requirements (i.e. Kelp Curtain). NOTE: THIS TOOL DOES NOT DISTINGUISH BETWEEN WHAT IS AND ISN'T OBTAINABLE. PLEASE DOUBLE CHECK THIS YOURSELF IF APPLICABLE<br>
-              &nbsp;&nbsp;&nbsp;Added search filters<br>
-              &nbsp;&nbsp;&nbsp;General UI cleanup<br>
-              &nbsp;&nbsp;&nbsp;Full v3.0 release will also list CAMP budget costs, have more source icons, and include further polishing of minor issues<br>
-          </div>
+          <ul>
+              <li>
+                  <div>
+                      Expansion towards a more generalized database tool:<br>
+                      Added category icons<br>
+                      Added placement conditions (plan, entitlement) for objects, and added respective source icons, i.e. SCORE, Gold Bullion, Stamps, Atomic Shop icons. Known issue with beta version: certain plans will not show yet (i.e. Nuclear Winter stash boxes), nor do challenge requirements (i.e. Kelp Curtain). NOTE: THIS TOOL DOES NOT DISTINGUISH BETWEEN WHAT IS AND ISN'T OBTAINABLE. PLEASE DOUBLE CHECK THIS YOURSELF IF APPLICABLE<br>
+                      Added search filters<br>
+                      General UI cleanup<br>
+                      Full v3.0 release will also list CAMP budget costs, have more source icons, and include further polishing of minor issues
+                  </div>
+              </li>
+          </ul>
       </div>
       <div class="changelog-entry">
         <h4>v2.3.1</h4>
