--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -139,6 +139,7 @@
   .search-line {
     display: flex;
     gap: 0;
+    position: sticky;
     width: 100%;
     max-width: 450px;
     align-items: center; 
