--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -47,7 +47,7 @@
       flex: 1;
       overflow-y: auto;
   }
-  
+
 
   h1 {
     color: var(--accent);
@@ -107,8 +107,10 @@
   }
 
   .controls {
-    position: sticky;
     top: 0;
+    position: fixed !important;
+    left: 0;
+    right: 0;
     z-index: 100;
     background: var(--bg);
     padding: 12px 16px;
