--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -37,18 +37,6 @@
     padding: 0 16px;
   }
 
-  .page {
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-  }
-
-  .content {
-      flex: 1;
-      overflow-y: auto;
-  }
-
-
   h1 {
     color: var(--accent);
     margin-bottom: 5px;
@@ -107,10 +95,8 @@
   }
 
   .controls {
-    top: 0;
-    position: fixed !important;
-    left: 0;
-    right: 0;
+    position: sticky;
+    top: 1px;
     z-index: 100;
     background: var(--bg);
     padding: 12px 16px;
