--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -95,8 +95,8 @@
   }
 
   .controls {
-    position: sticky;
-    top: 1px;
+    position: flex;
+    top: 0;
     z-index: 100;
     background: var(--bg);
     padding: 12px 16px;
@@ -151,7 +151,7 @@
   }
 
   .controls .inline-group {
-    display: flex;
+    display: sticky;
     align-items: center;
     gap: -10px;
     justify-content: center;
