--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -151,7 +151,8 @@
   }
 
   .controls .inline-group {
-    display: sticky;
+    display: flex;
+    position: sticky;
     align-items: center;
     gap: -10px;
     justify-content: center;
