--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1558,50 +1558,37 @@ function renderResults(query) {
   function matchesItem(item) {
   if (activeFilters.size === 0) return true;
 
-  // Separate filters
+  // Separate placement vs category filters
   const placementActive = [...activeFilters].filter(f => placementFilters.has(f));
   const categoryActive  = [...activeFilters].filter(f => !placementFilters.has(f));
 
-  // Flags for this item
+  // Determine flags
   const id = String(item.BOOK_EditorID || '').toLowerCase();
   const source = String(item.BOOK_SOURCE || '').toLowerCase();
 
   const hasChallenge = id.includes('challenge_');
-  const hasLearn     = source === 'learnonpickup'; // exact flag
+  const hasLearn     = source === 'learnbypickup'; // exact flag
   const hasPlan      = !!item.BOOK_FULL?.trim() && !hasChallenge; // exclude challenges
   const hasEnt       = !!item.ENTM_FULL?.trim();
 
   let placementMatch = true;
 
   if (placementActive.length > 0) {
-    // --- Single-selection shortcuts ---
-    if (placementActive.length === 1) {
-      const only = placementActive[0];
-      if (only === 'learn') {
-        placementMatch = hasLearn;
-      } else if (only === 'challenge') {
-        placementMatch = hasChallenge;
-      } else if (only === 'plan') {
-        placementMatch = hasPlan && !hasEnt;
-      } else if (only === 'entitlement') {
-        placementMatch = hasEnt && !hasPlan;
-      }
-    } 
-    // --- Multiple-selection → must satisfy all selected attributes ---
-    else {
-      placementMatch = placementActive.every(f => {
-        switch (f) {
-          case 'plan':       return hasPlan;
-          case 'entitlement':return hasEnt;
-          case 'challenge':  return hasChallenge;
-          case 'learn':      return hasLearn;
-          default:           return true;
-        }
-      });
+    // --- Plan/Entitlement strict hybrid AND/XOR ---
+    if (placementActive.includes('plan') && placementActive.includes('entitlement')) {
+      placementMatch = hasPlan && hasEnt; // must have both
+    } else if (placementActive.includes('plan')) {
+      placementMatch = hasPlan && !hasEnt;
+    } else if (placementActive.includes('entitlement')) {
+      placementMatch = hasEnt && !hasPlan;
     }
+
+    // --- Challenge and Learn are independent ---
+    if (placementActive.includes('challenge')) placementMatch = placementMatch && hasChallenge;
+    if (placementActive.includes('learn'))      placementMatch = placementMatch && hasLearn;
   }
 
-  // --- Category/subcategory OR filter ---
+  // --- Category/subcategory filters (OR) ---
   const categoryMatch = categoryActive.length === 0 || categoryActive.some(f =>
     (item.Category || '').toLowerCase() === f || (item.SubCategory || '').toLowerCase() === f
   );
