--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1555,53 +1555,61 @@ function renderResults(query) {
   // --- filters setup ---
   let placementFilters = new Set(['plan', 'entitlement', 'challenge', 'learn']);
 
-  function matchesItem(item) {
+ function matchesItem(item) {
   if (activeFilters.size === 0) return true;
 
+  // Separate filters
   const placementActive = [...activeFilters].filter(f => placementFilters.has(f));
   const categoryActive  = [...activeFilters].filter(f => !placementFilters.has(f));
 
+  // Determine item flags
   const id = String(item.BOOK_EditorID || '').toLowerCase();
   const source = String(item.BOOK_SOURCE || '').toLowerCase();
 
-  const hasChallenge = id.includes('challenge_');
-  const hasLearn     = source === 'learnbypickup';
-  const hasPlan      = !!item.BOOK_FULL?.trim() && !hasChallenge;
-  const hasEnt       = !!item.ENTM_FULL?.trim();
+  const isChallenge = id.includes('challenge_');
+  const isLearn    = source === 'learnonpickup';
+  const isPlanRaw  = !!item.BOOK_FULL?.trim();
+  const hasEnt     = !!item.ENTM_FULL?.trim();
+
+  // Plan includes all non-challenge items with BOOK_FULL (including LearnOnPickup)
+  const hasPlan    = isPlanRaw && !isChallenge;
+
+  const hasLearn   = isLearn;
 
   let placementMatch = true;
 
   if (placementActive.length > 0) {
-    // Single-selection
     if (placementActive.length === 1) {
+      // Single-selection: strict
       const only = placementActive[0];
       switch (only) {
-        case 'plan':        placementMatch = hasPlan && !hasEnt; break;
+        case 'plan':        placementMatch = hasPlan && !hasLearn && !isChallenge; break; // plan-only
         case 'entitlement': placementMatch = hasEnt && !hasPlan; break;
-        case 'challenge':   placementMatch = hasChallenge; break;
+        case 'challenge':   placementMatch = isChallenge; break;
         case 'learn':       placementMatch = hasLearn; break;
       }
     } else {
-      // Multiple-selection → all must be true
+      // Multi-selection: all selected attributes must be true
       placementMatch = placementActive.every(f => {
         switch (f) {
           case 'plan':        return hasPlan;
           case 'entitlement': return hasEnt;
-          case 'challenge':   return hasChallenge;
+          case 'challenge':   return isChallenge;
           case 'learn':       return hasLearn;
           default:            return true;
         }
       });
     }
   }
-  
 
+  // Category/subcategory filters (OR)
   const categoryMatch = categoryActive.length === 0 || categoryActive.some(f =>
     (item.Category || '').toLowerCase() === f || (item.SubCategory || '').toLowerCase() === f
   );
 
   return placementMatch && categoryMatch;
 }
+
 
 
 
