--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1152,6 +1152,13 @@ function createTooltipElement(text) {
   return t;
 }
 
+const tooltipMap = new Map();
+
+// When creating tooltips
+const tooltipEl = createTooltipElement(text);
+tooltipMap.set(item.ID, text);  
+attachTooltipToIcon(icon, tooltipEl);
+
 
 let mobileTooltipTimeout = null; // for resetting hide timer
 
