--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1799,7 +1799,7 @@ if (hasBook) {
     'EquinoxRewards': '/assets/EquinoxIcon.svg',
     'GrahmVendor': '/assets/GrahmIcon.webp',
     'ColossalProblemRewards': '/assets/PublicEventIcon.svg',
-    'ScorchedEarthRewards': '/assets/PublicEventIcon.svg'
+    'ScorchedEarthRewards': '/assets/PublicEventIcon.svg',
     'BeastsOfBurdenRewards': '/assets/PublicEventIcon.svg',
     'CampfireTalesRewards': '/assets/PublicEventIcon.svg',
     'DangerousPastimesRewards': '/assets/PublicEventIcon.svg',
